--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:background="@drawable/background2"
+    android:background="@drawable/runner"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edu.sc.FitLivin.SignupActivity">
@@ -116,9 +116,8 @@
             <Button
                 android:id="@+id/email_signup_button_in"
                 style="?android:textAppearanceSmall"
-                android:layout_width="match_parent"
+                android:layout_width="130dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
                 android:text="sign up"
                 android:textStyle="bold" />
 
