--- a/app/src/main/res/layout/fragment_stop_watch.xml
+++ b/app/src/main/res/layout/fragment_stop_watch.xml
@@ -1,51 +1,46 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="edu.sc.FitLivin.BodyBuildingDayOne"
-    android:id="@+id/containerFitnessP"
-    android:background="@drawable/background2"
-    >
-    <TextView
-       android:id="@+id/Timer"
-       android:layout_width="fill_parent"
-       android:layout_height="wrap_content"
-       android:gravity="center"
-       android:text="FitLivin Timer"
-       android:textSize="60dp"
-       android:textColor="#003dcc"
-    />
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:id="@+id/StopWatch"
+android:background="@drawable/background2">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        android:gravity="bottom|center" >
-    <Button
-        android:id="@+id/startTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Start"
-        android:textSize="20dp"
-        android:onClick="startTimer"
-    />
+<TextView
+    android:id="@+id/timer"
+    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_center="true"
+    android:layout_marginTop="150dp"
+    android:layout_marginLeft="20dp"
+    android:text="@string/timer"
+    android:textSize="100dp"
+    android:textColor="#ffffff" />
 
-    <Button
-        android:id="@+id/stopTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Stop"
-        android:textSize="20dp"
-        android:onClick="stopTimer"
-    />
-    <Button
-        android:id="@+id/resetTimer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Reset"
-        android:textSize="20dp"
-        android:onClick="resetTimer"
-        android:layout_below="@+id/stopTimer"
-        android:layout_gravity="bottom|center_horizontal"
-    />
-    </LinearLayout>
+<Button
+    android:id="@+id/start"
+    android:layout_height="55dp"
+    android:layout_width="100dp"
+    android:layout_centerVertical="true"
+    android:layout_marginLeft="38dp"
+    android:text="@string/start" />
 
-</FrameLayout>
+<Button
+    android:id="@+id/stop"
+    android:layout_height="55dp"
+    android:layout_width="100dp"
+    android:clickable="true"
+    android:layout_marginTop="275dp"
+    android:layout_marginLeft="270dp"
+    android:text="@string/stop" />
+
+<Button
+    android:id="@+id/reset"
+    android:layout_height="55dp"
+    android:layout_width="100dp"
+    android:clickable="true"
+    android:layout_marginLeft="150dp"
+    android:text="@string/reset"
+    android:layout_centerVertical="true" />
+
+
+</RelativeLayout>
+
