--- a/app/src/main/res/layout/fragment_fitness_program.xml
+++ b/app/src/main/res/layout/fragment_fitness_program.xml
@@ -108,5 +108,28 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
-</RelativeLayout>
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Strength Training"
+            android:id="@+id/StrengthTrainingIcon"
+            android:clickable="true"
+            android:layout_below="@+id/basedOnGoalsText"
+            android:layout_alignParentStart="true" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/bodyBuildingIcon"
+            android:layout_above="@+id/BodyBuildingButton"
+            android:layout_alignEnd="@+id/FitProBack" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/weightLossIcon"
+            android:layout_above="@+id/WeightLossButton"
+            android:layout_alignEnd="@+id/chooseFitnessProgramText" />
+
+    </RelativeLayout>
 </FrameLayout>
