--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -17,7 +17,7 @@
             android:text="MAX"
             android:id="@+id/textView2"
             android:layout_gravity="center_horizontal|top"
-            android:textColor="#fffef7"
+            android:textColor="#ffffff"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             />
