--- a/app/src/main/res/layout/fragment_fitness_program.xml
+++ b/app/src/main/res/layout/fragment_fitness_program.xml
@@ -1,5 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/containerFitnessP"
     android:background="@drawable/background2"
@@ -18,19 +19,19 @@
         android:text="Choose your Fitness Program:"
         android:id="@+id/chooseFitnessProgramText"
         android:textColor="#ffffff"
-        android:layout_marginTop="40dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Strength Training"
         android:id="@+id/StrengthTrainingButton"
+        android:layout_marginTop="100dp"
         android:background="#ff3c39"
         android:clickable="true"
-
-
         android:layout_below="@+id/basedOnGoalsText"
         android:layout_alignParentStart="true" />
 
@@ -62,9 +63,8 @@
         android:text="Get stronger with FitLivin!"
         android:id="@+id/strengthTrainingText"
         android:textColor="@android:color/white"
-        android:layout_below="@+id/StrengthTrainingButton"
-        android:layout_alignEnd="@+id/weightLossText"
-        android:layout_marginTop="42dp" />
+        android:layout_below="@id/StrengthTrainingButton"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -108,28 +108,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true" />
 
-        <ImageButton
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Strength Training"
-            android:id="@+id/StrengthTrainingIcon"
-            android:clickable="true"
-            android:layout_below="@+id/basedOnGoalsText"
-            android:layout_alignParentStart="true" />
 
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/bodyBuildingIcon"
-            android:layout_above="@+id/BodyBuildingButton"
-            android:layout_alignEnd="@+id/FitProBack" />
-
-        <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/weightLossIcon"
-            android:layout_above="@+id/WeightLossButton"
-            android:layout_alignEnd="@+id/chooseFitnessProgramText" />
 
     </RelativeLayout>
 </FrameLayout>
