--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -40,7 +40,7 @@
         android:layout_gravity="left|center_vertical"
         android:textColor="#ffffff" />
 
-    <ImageView
+    <ImageButton
         android:scaleType="fitXY"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,6 +48,7 @@
         android:layout_gravity="right|top"
         android:layout_marginBottom="50dp"
         android:src="@drawable/bench"
+        android:clickable="true"
         android:layout_below="@+id/benchDetail"
         android:layout_above="@+id/flyText"
         />
