--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Weight Goal: "
-            android:id="@+id/WeightText"
+            android:id="@+id/editnametext"
             android:layout_gravity="left|top"
             android:textColor="#ffffff"
             android:textSize="20dp"
@@ -43,7 +43,7 @@
             android:textColor="#ffffff"
             android:textSize="20dp"
             android:textIsSelectable="true"
-            android:layout_toEndOf="@+id/WeightText"
+            android:layout_toEndOf="@+id/editnametext"
             android:layout_below="@+id/textView2"/>
 
         <EditText
@@ -54,7 +54,7 @@
             android:layout_gravity="left|center_vertical"
             android:background="#ffffff"
             android:hint="WeightGoal"
-            android:layout_below="@+id/WeightText"
+            android:layout_below="@+id/editnametext"
             android:layout_alignParentStart="true" />
         <TextView
             android:layout_width="wrap_content"
